# quest-of-township

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: testing-dev.yml  testing.yml
assets/maps/: map.json  sprites.tsx  starter-town.json  starter-town.tmx
src/: main.rs
src/components/: background_marker.rs  grid_loc.rs  map_size.rs  mod.rs  player.rs  player_loc.rs  player_state.rs  settings.rs  tile_map.rs  wall.rs
src/events/: level_event.rs  mod.rs  player_movement.rs
src/plugins/: prototype.rs.proto
src/systems/: cache_wall_locations.rs  controls_player_move.rs  handle_player_move.rs  level_loaded.rs  mk_size_res.rs  mod.rs  move_pc.rs  player_in_motion.rs  prototype.rs.proto  set_map_anchor.rs
tiled-maps/: .gitignore  main-outside.tsx  quest-of-township.tiled-session  sprites.tsx  starter-town.json  starter-town.tmx
