[package]
name = "quest-of-township"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = ["png"] }
bevy_asset_loader = { version = "0.24.0", features = ["2d", "progress_tracking"] }
bevy_common_assets = { version = "0.14.0", features = ["ron"] }
bevy_ecs_tiled = { version = "0.10.0", features = ["serde"] }
iyes_progress = { version = "0.15.0", features = ["assets"] }
serde = { version = "1.0.228", features = ["derive"] }

# # You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# # <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
# [package.metadata.bevy_lint]
# # panicking_methods = "deny"
# # pedantic = "warn"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[profile.dev.package.wgpu-types]
debug-assertions = false
